styles/globals.css
/* TAILWIND CSS */
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

/* MODULE CSS */
@import "./dashboards/general.css";
@import "./dashboards/table.css";
@import "./dashboards/banner.css";

@layer base {
  h1 {
    @apply font-header text-4xl font-bold leading-[54px];
  }

  h2 {
    @apply font-header text-3xl font-bold leading-[38px] dark:text-white;
  }

  h3 {
    @apply font-header text-2xl font-bold leading-[32px] dark:text-white;
  }

  h4 {
    @apply font-header text-xl font-bold leading-[28px] dark:text-white;
  }
  h5 {
    @apply text-lg font-bold tracking-normal dark:text-white;
  }

  h6 {
    @apply text-base font-semibold uppercase tracking-wider text-gray-500;
  }

  input[type="search"]::-webkit-search-decoration,
  input[type="search"]::-webkit-search-cancel-button,
  input[type="search"]::-webkit-search-results-button,
  input[type="search"]::-webkit-search-results-decoration {
    appearance: none;
  }
}

@layer components {
  .btn {
    @apply rounded-md border border-transparent px-3 py-1.5 font-medium;
  }

  .btn-primary {
    @apply bg-gradient-to-t from-primary to-[#3E7AFF] text-white hover:to-primary hover:shadow;
  }

  .btn-default {
    @apply border-outline bg-white text-black;
  }

  .text-link {
    @apply cursor-pointer font-medium text-primary hover:underline;
  }

  .text-footer-link {
    @apply cursor-pointer text-sm text-dim hover:text-black hover:underline;
  }

  .number {
    @apply font-medium;
  }

  /* HERO MESH GRADIENTS */
}

.graphiql-container {
  @apply min-h-screen;
}

input[type="range"] {
  opacity: 0%;
}

input[type="range"]::-webkit-slider-thumb {
  pointer-events: all;
}

/* button[role="tab"][aria-selected="true"] {
    position: relative;
}

button[role="tab"][aria-selected="true"]::after {
    content: "";
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid #0f172a;
    position: absolute;
    bottom: -6px;
    left: 50%;
    transform: translateX(-50%);
} */

.button-dashboard:after {
  content: "";
  height: 10px;
  width: 100%;
  position: absolute;
  bottom: -10px;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

